# phishing-feed-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: postmaster.pid
data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 2619  pg_internal.init
data/base/4/: 2619
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
src/: celery_base.py  celery_config.py  celerybeat-schedule.db  main.py  models.py  tasks.py  utilities.py
