[tool.poetry]
name = "phishing-feed-tracker"
version = "1.5.1"
description = "phishing feed tracker service"
authors = ["Buğra Çayır"]
readme = "README.md"
packages = [{include = "phishing_feed_tracker"}]

[tool.poetry.dependencies]
python = "3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
