[tool.poetry]
name = "phishing-feed-tracker"
version = "1.5.1"
description = "phishing feed tracker service"
authors = ["Buğra Çayır"]
readme = "README.md"
packages = [{include = "phishing_feed_tracker"}]

[tool.poetry.dependencies]
python = "3.10.9"
sqlalchemy = "^2.0.18"
celery = "^5.3.1" #celerynin pypi url'i koyulabilir
base = "^0.0.0"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
requests = "^2.31.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
